[package]
name = "locodrive"
version = "0.1.0"
authors = ["Fabius Mettner <fabius1705@live.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "locodrive"

[dependencies]
log = "^0.4.6"
serial = "0.4"

[build-dependencies]
flapigen = "0.6.0-pre7"
bindgen = { version = "0.57.0" }
