[package]
name = "locodrive"
version = "0.0.1"
authors = ["Fabius Mettner <fabius1705@live.de>"]
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "locodrive"

[dependencies]
log = "^0.4.6"
serialport = "4.0.1"
condvar = "0.1.1"

[build-dependencies]
dirs = "4.0.0"
flapigen = "0.6.0-pre7"
bindgen = { version = "0.57.0" }